--- a/Employee_Management_System/src/components/style.css
+++ b/Employee_Management_System/src/components/style.css
@@ -13,3 +13,11 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
+.nav-link-container{
+    padding: 0 15px 0 0;
+}
+.nav-link-container:hover{
+    background-color: #3f3c3c;
+    border-radius: 6px;
+    transition: 0.2s ease-in-out;
+}
