--- a/Employee_Management_System/src/components/style.css
+++ b/Employee_Management_System/src/components/style.css
@@ -21,3 +21,8 @@
     border-radius: 6px;
     transition: 0.2s ease-in-out;
 }
+.employee_image{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
